<resources>
    <string name="app_name">Sensing the environment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_sensor_list">Sensors</string>
    <string name="title_sensor_detail">Sensor Detail</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="list_sensors">All Sensors</string>
    <string name="sensor_name">Sensor name:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="mac_address">MAC:</string>
    <string name="description">Description:</string>

    <string name="title_reading_list">Readings</string>
    <string name="title_reading_detail">Reading Detail</string>
    <string name="list_readings">All Readings</string>
    <string name="title_activity_feeder">Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="delete_all_sensors">Delete all sensors</string>
    <string name="contacts">Contacts</string>
    <string name="warning">Warning</string>
    <string name="confirmation_delete_sensors">Are you sure you want to reset the known sensors database?</string>
    <string name="success_delete_sensors">All known sensors deleted.</string>
    <string name="unnamed">Unnamed</string>
    <string name="save">Save</string>
    <string name="click_to_connect">Click to connect</string>
    <string name="click_to_request">Click to get info</string>
    <string name="near_sensor">Near sensor:</string>
    <string name="found_device">Found new device:</string>
    <string name="new_info">Send new data:</string>
    <string name="click_to_details">Click to details</string>
    <string name="initializing">Initializing...</string>
    <string name="scanning">Scanning...</string>
    <string name="finish_scanning">Finished Scan.</string>
    <string name="force_scan">Scan now</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_refresh_rate">Refresh Rate(s)</string>
    <string name="pref_retries">Connection Retries</string>
    <string name="credits">Credits</string>
    <string name="credits_launcher_icon">Icon made by <a href="http://www.flaticon.com/authors/freepik">freepik</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="action_credits">Credits</string>
</resources>
